feat actulizarcion del from

--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -3,7 +3,7 @@
   flex-wrap: nowrap;
   justify-content:center;
   align-items: center;
-  background-image: url(/Register.png);
+  background-image: url(/register.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
