--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,6 +1,6 @@
 body, #home-background {
     min-height: 100vh;
-    background-image: url('/Register.png');
+    background-image: url('/register.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -10,22 +10,26 @@ body, #home-background {
 }
 
 #home-content {
-    background: rgba(0, 0, 0, 0.55);
-    color: #fff;
+    background : rgba(255, 255, 255 , 0.8);
     border-radius: 18px;
-    box-shadow: 0 4px 16px rgba(0,0,0,0.25);
+    box-shadow: 0 4px 16px rgba(0,0,0,0.5);
     padding: 32px 40px;
   
 }
 
 header {
-    background-color: rgba(0, 0, 0, 0.55) !important;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 32px;
 }
 
 .MuiDrawer-paper {
-    background: rgba(0, 0, 0, 0.55) !important;
-    border-right: 0 4px 16px rgba(0,0,0,0.25);
-    color: white !important;
+    border-right: 0 4px 16px rgba(0,0,0,0.5);
+    background: #fff !important;
+    box-shadow: 0 4px 16px rgba(0,0,0,0.5);
+    padding-top: 15px;
+
 }
 
 .MuiListItemButton-root.Mui-selected {
