--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -10,7 +10,11 @@ body, #home-background {
 }
 
 #home-content {
-    background : rgba(255, 255, 255 , 0.8);
+    margin-top: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    background : #fff;
     border-radius: 18px;
     box-shadow: 0 4px 16px rgba(0,0,0,0.5);
     padding: 32px 40px;
@@ -20,9 +24,19 @@ body, #home-background {
 header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    margin-bottom: 32px;
+    align-items: start;
+
 }
+
+#header-form {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    padding-bottom: 16px;
+    border-bottom: 2px solid #ddd; /* Aquí está la raya */
+    margin-bottom: 24px; /* Separación del contenido siguiente */
+}
+
 
 .MuiDrawer-paper {
     border-right: 0 4px 16px rgba(0,0,0,0.5);
@@ -33,7 +47,14 @@ header {
 }
 
 .MuiListItemButton-root.Mui-selected {
-    background: #65676a !important;
+    background: #1976d2 !important;
     color: #fff !important;
     border-radius: 8px;
+
+}
+
+.MuiListItemButton-root.Mui-selected svg {
+    color: #fff !important;
+    border-radius: 8px;
+
 }
